WordPressへの投稿の送信処理を作成 (認証方法の問題で動作未確認)

--- a/client/CmsClient/Properties/Resources.resx
+++ b/client/CmsClient/Properties/Resources.resx
@@ -147,6 +147,9 @@
   <data name="SELECT_PATH_TO_WATCH" xml:space="preserve">
     <value>監視対象の文書フォルダを選択してください。</value>
   </data>
+  <data name="UPLOAD" xml:space="preserve">
+    <value>送信</value>
+  </data>
   <data name="USER_ID" xml:space="preserve">
     <value>ユーザーID</value>
   </data>
